--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
 <img class="ui centered image" src="http://courses.ics.hawaii.edu/ics314s20/morea/ui-frameworks/experience-islandsnow-logo.png">
 
-<div class="ui centered grid container">
-
+<div class="ui borderless middlemenu menu">
   <div class="ui centered grid container">
     <div class="ui dropdown item">
       <div class="text">MEN</div>
@@ -118,6 +117,11 @@
   </div>
 </div>
 
+
+
+
+<img class="ui fluid image"
+     src="http://courses.ics.hawaii.edu/ics314s20/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
 
 
 
