--- a/index.html
+++ b/index.html
@@ -124,6 +124,42 @@
      src="http://courses.ics.hawaii.edu/ics314s20/morea/ui-frameworks/experience-islandsnow-video-snapshot.png">
 
 
+<div class="ui three column grid container">
+  <div class="ui column">
+    <div class="ui list">
+      <div class="item"><a href="index.html">About us</a></div>
+      <div class="item"><a href="index.html">Share locations</a></div>
+      <div class="item"><a href="index.html">Employment</a></div>
+      <div class="item"><a href="index.html">Videos</a></div>
+      <div class="item"><a href="index.html">Shipping & Returns</a></div>
+      <div class="item"><a href="index.html">Terms & Conditions</a></div>
+      <div class="item"><a href="index.html">Privacy Policy</a></div>
+    </div>
+  </div>
+
+  <div class="ui column">
+    <div class="ui list">
+      <div class="item"><a href="index.html">Men</a></div>
+      <div class="item"><a href="index.html">Women</a></div>
+      <div class="item"><a href="index.html">Kids</a></div>
+      <div class="item"><a href="index.html">Brands</a></div>
+      <div class="item"><a href="index.html">Sale</a></div>
+    </div>
+  </div>
+
+  <div class="ui column"><p>Join our mailing list for updates<br>
+    Sign up to receive our email updates!</p>
+
+    <div class="ui action input">
+      <label for="email"></label>
+      <input type="text"
+             placeholder="Enter email address"
+             id="email">
+      <i class="ui black button">Join</i>
+    </div>
+  </div>
+
+</div>
 
 
 
